<resources>
    <string name="app_name">OneTouchDevKit</string>
    <string name="registeration">Register</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered.</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="step_next"> Next > </string>
    <string name="step_cancel">Cancel</string>
    <string name="delete_area">Delete Area</string>
    <string name="delete_device">Delete Device</string>
    <string name="turn_on_all">Turn on All</string>
    <string name="turn_on">Turn On</string>
    <string name="edit">Edit</string>

    <string name="no_devices_message">No Flylight devices added yet !</string>
    <string name="no_rooms_message">No areas added yet !</string>
    <string name="tab_devices">FlyLight Devices</string>
    <string name="tab_areas">Areas</string>
    <string name="empty_area_nam_err">Area name cannot be empty.</string>
    <string name="empty_area_desc_err">Area description cannot be empty.</string>
    <string name="failed_to_create_room_err">Unable to create room.</string>
    <string name="link_device_to_room_msg">Link FlyLight device to room. Choose from existing list or add a new device.</string>

    <string name="step_1_name">
        Pairing your new FlyLight device
    </string>
    <string name="add_device_step1_desc">
        Power up your new FlyLight device, then press and hold the button for 5s until the led indicator blinks twice and on repeatedly.
    </string>

    <string name="step_2_name">Choose a WiFi</string>
    <string name="add_device_wifi_note">
        (Only supports 2.4Ghz Wifi. Check your Wifi router for details.)
    </string>
    <string name="add_device_wifi_ssid_name">
        WiFi Name
    </string>
    <string name="add_device_wifi_psk">
        WiFi Password
    </string>
    <string name="add_device_configure">
        Configure
    </string>

    <string name="add_device_title">New FlyLight Device</string>
    <string name="new_area_title">New Area</string>

    <string name="area_intro">Having areas will allow you to group multiple FlyLight devices together. Like Kitchen, Living room or a custom area with FlyLight devices from multiple areas. </string>

    <string name="create_room">Create Room</string>
    <string name="link_devices">Link Devices</string>

    <string name="step_3_name">Pairing FlyLight Device</string>
    <string name="add_device_step3_desc">
        Please wait.. your new FlyLight device is getting paired &amp; linked to your profile.
    </string>

    <string name="step_4_name">Complete Setup</string>
    <string name="add_device_step4_device_name">
        Device Name
    </string>
    <string name="device_name_step_4_msg">
        Set Name for FlyLight Device
    </string>
    <string name="add_device_step4_device_image">
        Add a Picture of FlyLight device location (optional).
    </string>

    <string name="add_area_hint">Area Name</string>
    <string name="add_area_desc_hint">Area Description</string>
    <string name="add_device_to_room">New Device</string>

    <string name="device_settings">Device Settings</string>

    <string name="device_setting_led">LED</string>
    <string name="device_setting_motor">Motor</string>
    <string name="device_setting_buzzer">Buzzer</string>
    <string name="device_settings_rgbs">RGB</string>
    <string name="device_settings_temperature">Temperature Sensor</string>
    <string name="device_setting_motion_sensor">Motion Sensor</string>
    <string name="device_settings_rtc">Real Time Clock (RTC)</string>
    <string name="device_settings_wifi">WiFi Settings</string>
    <string name="device_settings_device_mode">Device Mode</string>


    <string-array name="add_device_labels">
        <item>
        1
        </item>

        <item>
        2
        </item>

        <item>
        3
        </item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
