<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_blue_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_2_name"
        android:textColor="@color/colorAccent"
        android:id="@+id/txtv_step_name"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:layout_margin="10dp"
        android:textSize="20sp"/>


    <ImageView
        android:layout_width="@dimen/logo_s_w_h"
        android:layout_height="@dimen/logo_s_w_h"
        android:layout_below="@+id/txtv_step_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:src="@drawable/router"
        android:id="@+id/lyt_router_logo"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_gravity="top|center" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_router_logo"
            android:padding="10dp"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyt_router_logo"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:id="@+id/lyt_wifi_details"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtxt_wifi_ssid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/add_device_wifi_ssid_name"
                        android:inputType="none"
                        android:editable="false"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtxt_wifi_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/add_device_wifi_psk"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/add_device_wifi_note"
                    android:layout_margin="2dp"/>

                <Button
                    android:id="@+id/btn_configure_wifi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@color/colorAccent"
                    android:text="@string/add_device_configure"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:text="@string/add_device_step3_desc"
                    android:visibility="gone"
                    android:id="@+id/edtx_wifi_configure_progress_text"
                    android:layout_margin="2dp"/>



        </FrameLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/step_cancel"
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_cancel_step"
        android:fontFamily="sans-serif"/>

    </RelativeLayout>


</FrameLayout>
