<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_blue_background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/device_name_step_4_msg"/>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/edtxt_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/add_device_step4_device_name"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:maxLines="1"
                android:textColorHint="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/btn_configure_device"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@color/colorAccent"
            android:text="@string/add_device_configure"
            android:fontFamily="sans-serif"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/black" />








</RelativeLayout>
